
[b]Version History[/b]
Guide makers et cetera, please include the version into which your guide was written.

Version [b]2016.2.9[/b]:
-SLP view improved.
-Game path can be read from registry.
-Pressing control + 1...4 changes focus between editors.

Version [b]2016.1.24[/b]:
-New lines handled properly when editing language DLL files.
-User interface fixes and improvements.

Version [b]2016.1.20[/b]:
-Multiple renames in the user interface of units and techs.
-SLP based terrains can be shown in the SLP view.

Version [b]2015.12.27[/b]:
-Unit size shapes can be viewed in the SLP view.

Version [b]2015.12.17[/b]:
-Improved SLP view when stack option is unchecked.
-Fixed black shadows on saved SLPs.

Version [b]2015.12.11[/b]:
-Added copy sounds from civ to civ button to sounds tab.
-Added an option to merge shadow from another SLP.

Version [b]2015.12.2[/b]:
-Terrain restriction tab updated.

Version [b]2015.11.26[/b]:
-Renamed enable/disable buttons.
-Added a button to enable automatic backups.
-Added new handy buttons to sounds tab.

Version [b]2015.11.24[/b]:
-New/better information here and there.

Version [b]2015.11.18[/b]:
-Terrain restriction names customizable.
-Updates for Age of Empires 1.

Version [b]2015.11.16[/b]:
-Added an option to load one extra first priority DRS file.
-Updated techs tab for team effects.
-All unit filters combined.

Version [b]2015.11.5[/b]:
-Updates for The African Kingdoms.
-Only last language file gets saved if only it was edited.

Version [b]2015.10.16[/b]:
-Bugfix: Language strings are shown again for buildings.

Version [b]2015.9.24[/b]:
-Sorted recent paths.
-House graphics with fire animate properly.
-Villager mode renamed.
-Option to keep main window on top.

Version [b]2015.8.28[/b]:
-Simple animations synced.
-SLP view angle settable by mouse right click.
-Angle rotation rate based on available angles.
-Fixed showing trebuchet/cannon icons.
-Fixed showing tech icons and unit action graphics in SWGB and CC.
